--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,8 @@ h1 {@include header_font(); font-size:24px; letter-spacing:2px; text-transform: 
 h2 {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:16px;}
 h3 {@include header_font(); font-size:14px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:30px;}
 
+h1.accommodation-name {position: absolute; z-index: 5; color: #fff; width: 100%; bottom: 100px; font-size: 120px;}
+
 a,a:hover,a:focus {color:#000000; text-decoration:none;}
 
 p,ul,ol {width:740px; text-align:justify; margin:0 auto 30px auto;}
@@ -87,18 +89,18 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
   .banner-overlay::before, .banner-overlay::after {content: ''; position: absolute; width: 100%; background-color: #fff; left: -100%; bottom: 0; height: 30px;}
   .banner-overlay::after {left: auto; right: -100%;}
-  .logo,.banner-text {top:50%; margin-top:-100px; position:relative;
+  .logo,.banner-text {@include vertical-align();
     h2 {@include slider_font(); font-size:48px; margin:0; letter-spacing:5px;}
-    h1 {@include slider_font(); font-size:120px; margin:45px 0 30px 0; letter-spacing:13px; line-height:50px;}
+    h1 {@include slider_font(); font-size:120px; margin:0; letter-spacing:13px; line-height:normal;}
     h3 {@include header_font(300); font-size:14px; color:#ffffff; letter-spacing:0;}
   }
-  .arrow {top:60%; left:50%; margin:0 0 0 -15px;}
+  .arrow {top:70%; left:50%; margin:0 0 0 -15px;}
   .arrow:hover {cursor:pointer;}
 }
 .ms-skin-default .ms-nav-prev {left:40px!important;}
 .ms-skin-default .ms-nav-next {right:40px!important}
 
-#welcome,#locations,#contact {padding:50px 0 70px 0;
+#welcome, #contact {padding:50px 0 70px 0;
   .contact-form span {width: 740px; margin: 0 auto!important; background-color: #FFFFFF; border: 1px solid red; padding: 0; display: block; margin: 15px; color: red; line-height:18px; padding:5px;}
   .contact-form span.success { border: 1px solid green; color: green; }
   form {width:740px; margin:0 auto;
@@ -139,14 +141,15 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 #contact {background:#f4f4f4;}
 
-#people {background: url("/assets/bg-people.jpg") top center no-repeat; padding:85px 0 10px 0;
+#people {background: url("/assets/bg-people.jpg") top center no-repeat; padding:100px 0 70px 0 !important;
   .content-container .content {transform:none;
     h2 {font-size:15px; line-height:24px;}
-    .street-child {width:740px; margin:0 auto; padding: 50px 0 0 0;
-      img {float:left; margin-right:20px;}
-      p {font-size:10px; line-height:16px; color:#000000; margin:0; width:auto;}
-    }
   }
+}
+
+#locations {padding:100px 0 70px 0;
+  .streetchild {width:740px; margin:0 auto;}
+  a {float:left; margin:0 20px 0 0;}
 }
 
 #countries {background: url("/assets/bg-countries.jpg") top center no-repeat;
@@ -202,19 +205,24 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
+.rates {width:740px; margin:0 auto;}
+
 .monthbar { width:100%; height:20px; border-radius:10px; overflow:hidden; }
-.month { float:left; width:8.33%; line-height:20px; font-family:roboto; font-size:10px; text-align:center; color: #58595b; }
+.month { float:left; width:8.33%; line-height:20px; font-family:roboto; font-size:10px; text-align:center; color: #ffffff; }
 .low { background:#b6c274; }
 .mid { background:#ffd351; }
 .high { background:#fca938; }
+.closed { background:#d85f44; }
 .clear { clear:both; }
 .prices {width: 100%; Padding-top: 30px; text-align: center; font-family:roboto; font-size: 15px; color: #58595b; margin-bottom: 80px;}
-.price-low {width: 33.33333%; float: left; text-align: right}
+.price-low {width: 25%; float: left; text-align: center}
 .price-low img {vertical-align: middle;}
-.price-mid {width: 33.33333%; float: left;}
+.price-mid {width: 25%; float: left; text-align: center;}
 .price-mid img {vertical-align: middle;}
-.price-high {width: 33.3333%; float: left; text-align: left}
+.price-high {width: 25%; float: left; text-align: center;}
 .price-high img {vertical-align: middle;}
+.price-closed {width: 25%; float: left; text-align: center;}
+.price-closed img {vertical-align: middle;}
 .prices span{
   margin-left: 3px;
   font-size: 11px;
@@ -280,7 +288,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** xs ***/
 
 @media (max-width:767px) {
-  .container {max-width:320px;}
+  // .container {max-width:320px;}
   .logo {position: absolute; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
   .navbar-hamburger {top:10px; right:10px;}
   nav ul {margin-top:50px;}
@@ -318,10 +326,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px!important;}
-  .blog_list {padding:0;}
-
-
-  
+  .blog_list {padding:0;}  
   .blog_locations {margin-top:30px;}
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
   .blog_show {padding:0;}
@@ -342,7 +347,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** sm ***/
 
 @media (min-width:768px) and (max-width: 991px) {
-  .container {width: 750px;}
+  // .container {width: 750px;}
   p,form,#people .content-container .content h2, .street-child, .contact-form span, #welcome ul,.content-container .content h1 {width:100%!important;}
   #people .content-container .content .street-child {padding: 30px 0 0 0;}
   #people .content-container .content .street-child img {margin-right:13px;}
@@ -370,7 +375,30 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .container {width: 1170px;}
 }
 
+/*** Enforce landscape view ***/
 
+#container { display:block; }
+
+@media only screen and (orientation:portrait){
+  #container {
+    height: 100vw;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+}
+
+@media only screen and (orientation:landscape){
+  #container {
+     -webkit-transform: rotate(0deg);
+     -moz-transform: rotate(0deg);
+     -o-transform: rotate(0deg);
+     -ms-transform: rotate(0deg);
+     transform: rotate(0deg);
+  }
+}
 
 .modal-dialog {width:940px;
   .modal-content {border-radius:0; box-shadow: none;
