--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,7 +2,7 @@
 <%= render '/refinery/html_tag' %>
 <% site_bar = render('/refinery/site_bar', :head => true) -%>
 <%= render '/refinery/head' %>
-  <body>
+  <body id="container">
   <%= site_bar -%>
   <%= render '/refinery/ie6check' if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
 
@@ -29,10 +29,6 @@
             <div class="content div2">
               <h2><%= copywriting('Street Child First Text', {:phrase_type => 'text', :scope => 'Home Page', :default => '"WE STRONGLY BELIEVE THAT TRAVELLING TO AFRICA SHOULD MAKE A DIFFERENCE NOT JUST TO TRAVELLERS, BUT TO THE COUNTRIES AND PEOPLES OF THAT VAST AND BEAUTIFUL CONTINENT – THAT THE JOURNEY BENEFITS ALL INVOLVED."' }) %></h2>
               <p><%= copywriting('Street Child Second Text', {:phrase_type => 'text', :scope => 'Home Page', :default => 'With this in mind, we work with top-level local guides and hosts, and only use on-the-ground partners that we have long-standing relationships with and who share our values. We directly support our charity partners that make lasting and worthwhile contributions to the countries they work in.' }) %></p>
-              <div class="street-child">
-                <a href="http://www.street-child.co.uk" target="_blank"><img src="/assets/street-child-logo.png"></a>
-                <p>Street Child is a UK education and child welfare organisation that has worked with over 30,000 street children in Sierra Leone, Liberia and Nepal since 2008. Street Child empowers children by providing education opportunities and income-generating initiatives to enable families to build a sustainable future. Furthermore, they have been at the forefront of the ebola crisis: providing care for over 13,000 children orphaned by the virus by resettling them within a safe and secure family home and enrolling them in school. We have a strong relationship with Street Child and have been lucky enough to see the amazing work they do on the ground in Sierra Leone first hand. Every trip booked with us will directly support their work.</p>
-              </div>
             </div>
           </div>
         </div>
@@ -42,11 +38,14 @@
 
   <div id="locations">
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12 div3">
-          <%= raw @page.content_for(:side_body) %>
+        <div class="row">
+          <div class="col-xs-12 div3"> 
+          <div class="streetchild">      
+            <a href="http://www.street-child.co.uk" target="_blank"><img src="/assets/download.jpg"></a>
+            <p>Street Child is a UK education and child welfare organisation that has worked with over 30,000 street children in Sierra Leone, Liberia and Nepal since 2008. Street Child empowers children by providing education opportunities and income-generating initiatives to enable families to build a sustainable future. Furthermore, they have been at the forefront of the ebola crisis: providing care for over 13,000 children orphaned by the virus by resettling them within a safe and secure family home and enrolling them in school. We have a strong relationship with Street Child and have been lucky enough to see the amazing work they do on the ground in Sierra Leone first hand. Every trip booked with us will directly support their work.</p>
+          </div>
+          </div>
         </div>
-      </div>
     </div>
   </div>
 
