--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,7 +91,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .banner-overlay::after {left: auto; right: -100%;}
   .logo,.banner-text {@include vertical-align();
     h2 {@include slider_font(); font-size:48px; margin:0; letter-spacing:5px;}
-    h1 {@include slider_font(); font-size:120px; margin:0; letter-spacing:13px; line-height:normal;}
+    h1 {@include slider_font(); font-size:100px; margin:0; letter-spacing:13px; line-height:normal;}
     h3 {@include header_font(300); font-size:14px; color:#ffffff; letter-spacing:0;}
   }
   .arrow {top:70%; left:50%; margin:0 0 0 -15px;}
@@ -311,7 +311,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h1,h2,p,ul {width:100%!important;}
   #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0!important;}
   .content-container .content h1, .content-container .content h2 {margin:30px 0;}
-  #people { background: #489AF0; padding-bottom:30px!important;}
+  #people { background: #489AF0;}
   #people .street-child,form { width:100%!important; padding:0!important;}
   #people .street-child img {float:none!important; margin:0 auto 30px auto!important;}
   #countries {background: #000000;}
@@ -321,11 +321,13 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .contact-form span {width:100%!important;}
   .captcha {margin-bottom:5px;}
   .content-container .content img.logo {position:relative; left:0;}
+  #locations {padding-top:30px!important;}
+  #locations .streetchild {width:auto;}
   #locations ul { -webkit-column-count: 1;}
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
-  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px!important;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:248px!important;}
   .blog_list {padding:0;}  
   .blog_locations {margin-top:30px;}
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
