--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@ h1 {@include header_font(); font-size:24px; letter-spacing:2px; text-transform: 
 h2 {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:16px;}
 h3 {@include header_font(); font-size:14px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:30px;}
 
-h1.accommodation-name {position: absolute; z-index: 6; color: #fff; width: 100%; bottom: 100px; font-size: 120px;}
+h1.accommodation-name {position: absolute; z-index: 6; color: #fff; width: 100%; bottom: 100px; font-size: 120px; font-family: 'Marcellus', serif;}
 
 a,a:hover,a:focus {color:#000000; text-decoration:none;}
 
@@ -146,7 +146,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 #contact {background:#f4f4f4;}
 
-#people {background: url("/assets/bg-people.jpg") top center no-repeat; padding:100px 0 70px 0 !important;
+#people {background: #4799ef url("/assets/bg-people.jpg") bottom center no-repeat; padding:100px 0 70px 0 !important;
   .content-container .content {transform:none;
     h2 {font-size:15px; line-height:24px;}
   }
