--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -147,8 +147,9 @@
         </div>
       </div>
 
-      <% blogs = @location.posts.live.first(3) %>
-      <% if blogs.present? %>
+      <%# blogs = @location.posts.live.first(3) %>
+      <% blogs = 1 %>
+      <% if blogs == 2 %>
         <div id="locations-blog-container">
           <div class="container">
             <div class="location_blogs">
