--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@ h1 {@include header_font(); font-size:24px; letter-spacing:2px; text-transform: 
 h2 {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:16px;}
 h3 {@include header_font(); font-size:14px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:30px;}
 
-h1.accommodation-name {position: absolute; z-index: 6; color: #fff; width: 100%; bottom: 100px; font-size: 120px; font-family: 'Marcellus', serif;}
+h1.accommodation-name {position: absolute; z-index: 6; width: 100%; bottom: 100px; @include slider_font(); font-size:100px; margin:0; letter-spacing:13px; line-height:normal;}
 
 a,a:hover,a:focus {color:#000000; text-decoration:none;}
 
