--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -122,7 +122,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     h3 {margin:0;}
   }
   .team-member {padding-bottom:10px;}
-  img {margin:0 auto;}
+  img {margin:0 auto; border-radius:50%;}
   .btn-custom {background: #000; border-radius: 0; border: 0; height: 44px; width:200px; color: #fff; line-height:44px; padding:0;}
   .locations,.accommodations {padding-bottom:20px;
     h2 {font-size:20px; margin:50px 0;}
