--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -121,8 +121,10 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     .fa {margin:20px 0; color:#000000; font-size:20px;}
     h3 {margin:0;}
   }
-  .team-member {padding-bottom:10px;}
-  img {margin:0 auto; border-radius:50%;}
+  .team-member {padding-bottom:10px;
+    img { border-radius:50%;}
+  }
+  img {margin:0 auto;}
   .btn-custom {background: #000; border-radius: 0; border: 0; height: 44px; width:200px; color: #fff; line-height:44px; padding:0;}
   .locations,.accommodations {padding-bottom:20px;
     h2 {font-size:20px; margin:50px 0;}
