--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -3,7 +3,7 @@
     <% @accommodation.gallery.items.reorder('position ASC').each do |banner| %>
     <a href="#banner-overlay"><div class="banner-overlay" id="banner-overlay"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
       <div class="ms-slide slide-1" data-delay="2">
-        <h1 class="accommodation-name"><%= @accommodation.name %></h1>
+        <h1 class="accommodation-name"><%= raw @accommodation.name %></h1>
         <div class="overlay"></div>
         <%= image_fu(banner.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
