--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -260,7 +260,7 @@
                     <div class="slide">
                       <%= link_to refinery.accommodations_accommodation_path(accommodation), :remote => true do %>
                         <%= image_fu accommodation.cover_image, "165x165#c" if accommodation.cover_image.present? %>
-                        <div class="name"><%= accommodation.name %></div>
+                        <div class="name"><%= raw accommodation.name %></div>
                       <% end %>
                     </div>
                   <% end %>
