--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@ h2 {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: 
 h3 {@include header_font(); font-size:14px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:30px;}
 
 h1.accommodation-name {position: absolute; z-index: 6; width: 100%; @include slider_font(); font-size:100px; margin:0; letter-spacing:13px; line-height:normal; top: 50%; margin-top: -75px;
-        span {@include slider_font(); font-size:48px; margin:0; letter-spacing:5px; display:block; line-height:0;}
+        span {@include slider_font(); font-size:48px; margin:20px; letter-spacing:5px; display:block; line-height:0;}
 }
 
 a,a:hover,a:focus {color:#000000; text-decoration:none;}
@@ -99,7 +99,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .logo,.banner-text {@include vertical-align();
     h2 {@include slider_font(); font-size:48px; margin:0; letter-spacing:5px;}
     h1 {@include slider_font(); font-size:100px; margin:0; letter-spacing:13px; line-height:normal;
-      span {@include slider_font(); font-size:48px; margin:0; letter-spacing:5px; display:block; line-height:0;}
+      span {@include slider_font(); font-size:48px; margin:20px; letter-spacing:5px; display:block; line-height:0;}
     }
     h3 {@include header_font(300); font-size:14px; color:#ffffff; letter-spacing:0;}
   }
