--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -6,8 +6,9 @@
   <%= site_bar -%>
   <%= render '/refinery/ie6check' if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
 
-  <%= render '/refinery/header' -%>
-
+  <div class="header-partial">
+    <%= render '/refinery/header' -%>
+  </div>
   <%= render '/shared/banner' %>
 
   <div id="welcome">
