--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -12,9 +12,9 @@
 <% twit = copywriting('Twitter', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
 <% ins = copywriting('Instagram', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
 <div class="social_links">
-  <div><a href="<%= face %>" target="_blank">Facebook</a></div>
-  <div><a href="<%= twit %>" target="_blank">Twitter</a></div>
-  <div><a href="<%= ins %>" target="_blank">Instagram</a></div>
+  <div><a href="<%= face %>" target="_blank"><img src="/assets/facebook.png"></a></div>
+  <div><a href="<%= twit %>" target="_blank"><img src="/assets/twitter.png"></a></div>
+  <div><a href="<%= ins %>" target="_blank"><img src="/assets/instagram.png"></a></div>
 </div>
 
 <nav class="nav-hide">
@@ -28,6 +28,14 @@
 			<span class="sb-icon-search"></span>
 		</form>
 	</div>
+  <% face = copywriting('Facebook', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
+<% twit = copywriting('Twitter', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
+<% ins = copywriting('Instagram', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
+<div class="social_links">
+  <div><a href="<%= face %>" target="_blank"><img src="/assets/facebook.png"></a></div>
+  <div><a href="<%= twit %>" target="_blank"><img src="/assets/twitter.png"></a></div>
+  <div><a href="<%= ins %>" target="_blank"><img src="/assets/instagram.png"></a></div>
+</div>
   </ul>
 </nav>
 
