--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -306,11 +306,13 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 /*** xs ***/
 @media (max-width:767px) {
+  #masterslider .banner-text h2 {font-size:17px!important; letter-spacing:3px!important;}
+  #masterslider .banner-text h1 {font-size:28px!important; letter-spacing:5px!important; line-height:29px!important;}
   .breadcrumb {margin-top: 10px;}
   .social_links {right: 10px;}
   h1.accommodation-name {font-size:24px; bottom:30px;}
   table {width: 100%;}
-  .logo {position: absolute; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
+  .logo {position: absolute!important; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
   .navbar-hamburger {top:10px; right:10px;}
   nav ul {margin-top:50px;}
 
