--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -4,6 +4,12 @@
   <%= render '/refinery/head' %>
   <body id="container">
 
+    <div class="bg"></div>
+
+    <div id="mobile-port">
+      <img src="/assets/landscape.png" />
+    </div>
+    
 
     <%= site_bar -%>
     <%= render '/refinery/ie6check' if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
