--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -315,7 +315,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .logo {position: absolute!important; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
   .navbar-hamburger {top:10px; right:10px;}
   nav ul {margin-top:50px;}
-
   nav ul h2 {margin:0!important; padding:5px 0;}
   nav ul h2 a,nav ul h2 span {font-size:12px;}  
   nav ul li.parent ul { margin-top:0;}
@@ -371,6 +370,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .accommodation_item .accommodation .accommodation-container .btn-custom {margin:40px 0 50px 0;}
   #welcome form .btn-custom {margin-bottom:30px!important;}
   .rates {width:auto;}
+  .footer img.logo {position:relative;}
 }
 
 /*** sm ***/
