--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -52,4 +52,9 @@ $( document ).ready(function() {
 
 </script>
 
+<style type="text/css">
+  #mobile-port { position:fixed; top:0px; left:0px; width:100%; height:100%; background:#222; text-align:center; z-index:1000; display:none;}
+  #mobile-port img { max-width:90%; position:absolute; top:50%; left:5%; transform:translateY(-50%); }
+</style>
+
 </head>
