--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -424,9 +424,9 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 body.modal-open {overflow:auto; margin-right:0!important; transform:none!important;}
 body { margin:0px; padding:0px; } 
 
-.bg { width:100%; height:100%; background-size:cover; background-position: center center; background-repeat: no-repeat; position:absolute; }
 
-
+#mobile-port { position:fixed; top:0px; left:0px; width:100%; height:100%; background:#222; text-align:center; z-index:1000; display:none;}
+#mobile-port img { max-width:90%; position:absolute; top:50%; left:5%; transform:translateY(-50%); }
 
 .bookings {font-size:13px; line-height:24px;
   .row {margin:0;}
