--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -92,7 +92,7 @@
           <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
       <% end %>
-  </div>
+  </div>git pull site5 master
 <% end %>
 
 
