--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -304,6 +304,8 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
+.content img.bottom-logo
+
 /*** xs ***/
 @media (max-width:767px) {
   #masterslider .banner-text h2 {font-size:17px!important; letter-spacing:3px!important;}
