--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -50,8 +50,8 @@
           <div class="content">
             <a href="#welcome"><i class="fa fa-chevron-up fa-3x"></i></a>
             <a href="/"><img src="/assets/bottom-logo.png" class="bottom-logo img-responsive"></a>
-            <span>&copy; 2015 Tailormade Africa &bull; All Rights Reserved &bull; <a href="http://www.perfectcircle.co.za" target="_blank">Web by Perfect Circle</a>.</span><br/>
-            <span><a href="/terms-conditions">Terms & Conditions</a> &bull; </span><a href="/bookings/new">Booking form</a>
+            <span>&copy; 2015 Tailormade Africa &bull; All Rights Reserved &bull; <a href="http://www.perfectcircle.co.za" target="_blank">Web by Perfect Circle</a>.</span>
+            <span><a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/bookings/new">Booking form</a></span>
             <a href="/"><img src="/assets/logos.png" class="logos img-responsive"></a>
           </div>
         </div>
