--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -183,7 +183,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 #footer {background: url("/assets/bg-footer.jpg") top center no-repeat; height:450px;
   .content-container {height: 450px;}
-  span {display:block; line-height:12px;}
+  span {display:block; line-height:18px;}
 }
 
 .content-container .content {@include vertical-align(); color:#ffffff;
@@ -305,7 +305,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
-.content img.bottom-logo {margin:20px auto 40px auto;}
+.content img.bottom-logo {margin:40px auto;}
 
 /*** xs ***/
 @media (max-width:767px) {
